<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/promgr"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/protitlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e7e7e7"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ProAppNameTitle"
                android:layout_width="190dip"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:gravity="center_vertical"
                android:text="@string/pro_title"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ProIsLockTtile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:minHeight="20dip"
                    android:minWidth="40dip"
                    android:src="@drawable/pro_lock" />

                <TextView
                    android:id="@+id/ProLock"
                    android:layout_width="40dip"
                    android:layout_height="15dip"
                    android:gravity="center"
                    android:text="@string/pro_lock"
                    android:textColor="@color/darkgray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ProNetTtile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:minHeight="20dip"
                    android:minWidth="40dip"
                    android:src="@drawable/pro_net" />

                <TextView
                    android:id="@+id/ProNet"
                    android:layout_width="40dip"
                    android:layout_height="15dip"
                    android:gravity="center"
                    android:text="@string/pro_net"
                    android:textColor="@color/darkgray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ProWifiTtile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:minHeight="20dip"
                    android:minWidth="40dip"
                    android:src="@drawable/pro_wifi" />

                <TextView
                    android:id="@+id/ProWifi"
                    android:layout_width="40dip"
                    android:layout_height="15dip"
                    android:gravity="center"
                    android:text="@string/pro_wifi"
                    android:textColor="@color/darkgray"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:drawSelectorOnTop="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/OpenLockProtect"
            android:layout_width="0.0dip"
            android:layout_height="50dip"
            android:layout_weight="1.0"
            android:singleLine="true"
            android:textOff="@string/pro_lockoff"
            android:textOn="@string/pro_lockon"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/OpenIptablesProtect"
            android:layout_width="0.0dip"
            android:layout_height="50dip"
            android:layout_weight="1.0"
            android:singleLine="true"
            android:textOff="@string/pro_netoff"
            android:textOn="@string/pro_neton"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>